done with vote comment, delete comment. todo: reply, edit, deleted parent comment display

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -129,7 +129,7 @@
 
             <div class="flex flex-col justify-center text-[11px]">
               <p>View Profile</p>
-              <p>u/{{ user.username }}</p>
+              <p id = "username">u/{{ user.username }}</p>
             </div>
           </a>
         </li>
