--- a/templates/community.html
+++ b/templates/community.html
@@ -14,9 +14,9 @@
                 class='w-full flex items-stretch justify-center h-[150px] rounded-lg border border-[#ffffff33] relative'>
 
                 {% if community.banner|startswith:'https' %}
-                    <img id="community_banner" src="{{ community.banner }}" alt="Community Banner" class='object-cover w-full h-full rounded-lg' />
+                    <img id="community_banner" src="{{ community.banner }}" alt="Community Banner" class='img-modal object-cover w-full h-full rounded-lg' />
                 {% else %}
-                    <img id="community_banner" src="{% static community.banner %}" alt="Community Banner" class='object-cover w-full h-full rounded-lg' />
+                    <img id="community_banner" src="{% static community.banner %}" alt="Community Banner" class='img-modal object-cover w-full h-full rounded-lg' />
                 {% endif %}
 
 
@@ -38,9 +38,9 @@
                         class="relative inline-flex items-center justify-center w-24 h-24 overflow-hidden rounded-full bg-white dark:bg-dark_1 p-2 {% if user_communities|get_community_role:community.id == 'admin' or 'moderator' %}cursor-pointer{%endif%}">
                         {% if community.avatar %}
                             {% if community.avatar|startswith:'https' %}
-                                <img id="community_avatar" src="{{community.avatar}}" class="w-full h-full rounded-full object-cover" />
+                                <img id="community_avatar" src="{{community.avatar}}" class="img-modal w-full h-full rounded-full object-cover" />
                             {% else %}
-                                <img id="community_avatar" src="{% static community.avatar %}" class="w-full h-full rounded-full object-cover" />
+                                <img id="community_avatar" src="{% static community.avatar %}" class="img-modal w-full h-full rounded-full object-cover" />
 
                             {% endif %}
                         {% if user_role == 'moderator' or user_role == 'admin' %}
