--- a/templates/components/post/post_detail.html
+++ b/templates/components/post/post_detail.html
@@ -45,10 +45,10 @@
                                 <div class="flex flex-row items-center gap-2 w-full">
                                     <div class="rounded-full w-10 h-10 bg-gray-200">
                                         {% if post.community.avatar|startswith:'https'%}
-                                        <img class="w-full h-full rounded-full object-cover"
+                                        <img class="img-modal w-full h-full rounded-full object-cover"
                                             src="{{ post.community.avatar }}" alt="Community avatar" />
                                         {% else %}
-                                        <img class="w-full h-full rounded-full object-cover"
+                                        <img class="img-modal w-full h-full rounded-full object-cover"
                                             src="{% static post.community.avatar %}" alt="Community avatar" />
                                         {% endif %}
                                     </div>
