--- a/templates/components/modals/create_community_modal.html
+++ b/templates/components/modals/create_community_modal.html
@@ -69,6 +69,8 @@
                             <input id="banner_file_input" name="banner" type="file" accept="image/*" class="hidden" />
                         </div>
                     </div>
+
+
                     <div class="flex flex-row justify-between">
                         <div class="rounded-full relative bottom-14 left-3">
                             <div id="avatar_preview_container"
@@ -88,7 +90,7 @@
                                 </div>
                             </div>
                             <div id="avatar_file_input_container">
-                                <label for="avatar_file_input" class="">
+                                <label for="avatar_file_input">
                                     <div
                                         class="bg-white_1 dark:bg-dark_6 dark:border-gray_1 w-[100px] h-[100px] border border-black border-dashed rounded-full flex flex-col gap-1 items-center justify-center text-[#82959B]">
                                         <svg fill="currentColor" height="20" viewBox="0 0 20 20" width="20"
@@ -113,8 +115,12 @@
                                     class="bg-white_1 dark:bg-dark_6 block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 rounded-lg border-1 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
                                     placeholder=" " maxlength="64" required />
                                 <label for="create_community_community_name_input"
-                                    class="absolute text-sm font-medium text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-4 z-10 origin-[0] start-2.5 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto">Community
-                                    Name</label>
+                                    class="absolute text-sm font-medium text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-4 z-10 origin-[0] start-2.5 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto">
+                                    <span class="flex flex-row gap-0">
+                                        <p>Community Name</p>
+                                        <p class="text-red-500">*</p>
+                                    </span>
+                                </label>
                             </div>
                         </div>
                     </div>
@@ -126,8 +132,12 @@
                                 placeholder="" rows="4" maxlength="255"></textarea>
 
                             <label for="create_community_community_description_input"
-                                class="absolute text-sm font-medium text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-4 z-10 origin-[0] start-2.5 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto">Community
-                                Description</label>
+                                class="absolute text-sm font-medium text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-4 z-10 origin-[0] start-2.5 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto">
+
+                                <span>
+                                    <span> Community Description</span>
+                                </span>
+                            </label>
                         </div>
                     </div>
                 </div>
