--- a/templates/components/modals/sign_in_modal.html
+++ b/templates/components/modals/sign_in_modal.html
@@ -22,6 +22,7 @@
             class="border-1 bg-white_1 dark:bg-dark_6 peer block w-full appearance-none rounded-lg border-gray-300 px-2.5 pb-2.5 pt-4 text-sm text-gray-900 focus:border-blue-600 focus:outline-none focus:ring-0 dark:border-gray-600 dark:text-white dark:focus:border-blue-500"
             placeholder=" "
             type="text"
+            maxlength="320"
           />
           <label
             for="sign_in_email_input"
@@ -36,6 +37,7 @@
             class="border-1 bg-white_1 dark:bg-dark_6 peer block w-full appearance-none rounded-lg border-gray-300 px-2.5 pb-2.5 pt-4 text-sm text-gray-900 focus:border-blue-600 focus:outline-none focus:ring-0 dark:border-gray-600 dark:text-white dark:focus:border-blue-500"
             type="password"
             placeholder=" "
+            maxlength="128"
           />
           <label
             for="sign_in_password"
