--- a/templates/components/post/edit_post.html
+++ b/templates/components/post/edit_post.html
@@ -33,7 +33,7 @@
                                 alt="Community avatar" />
                             {% else %}
                             <img class="w-full h-full rounded-full object-cover"
-                                src="{% static post.community.avatar %}" alt="Community avatar" />
+                                src="{{MEDIA_URL}}{{ post.community.avatar }}" alt="Community avatar" />
                             {% endif %}
                         </div>
                         <div class="flex flex-col items-start justify-end gap-0 leading-none">
