--- a/templates/components/post/post_detail.html
+++ b/templates/components/post/post_detail.html
@@ -49,7 +49,7 @@
                                             src="{{ post.community.avatar }}" alt="Community avatar" />
                                         {% else %}
                                         <img class="img-modal w-full h-full rounded-full object-cover"
-                                            src="{% static post.community.avatar %}" alt="Community avatar" />
+                                            src="{{MEDIA_URL}}{{post.community.avatar }}" alt="Community avatar" />
                                         {% endif %}
                                     </div>
                                     <div class="flex flex-col items-start justify-end gap-0 leading-none">
