--- a/templates/components/post/submit.html
+++ b/templates/components/post/submit.html
@@ -45,7 +45,7 @@
                                 {% if community.avatar|startswith:'https' %}
                                     <img src="{{ community.avatar }}" alt="Community Avatar" class="w-full h-full rounded-full object-cover" />
                                 {% else %}
-                                    <img src="{% static community.avatar %}" alt="Community Avatar" class="w-full h-full rounded-full object-cover" />
+                                    <img src="{{MEDIA_URL}}{{ community.avatar }}" alt="Community Avatar" class="w-full h-full rounded-full object-cover" />
                                 {% endif %}
                             </div>
                             <span>r/{{ community.name }}</span>
@@ -96,7 +96,7 @@
     let community = "{{community}}";
 
     if ("{{community}}") {
-        selectedAvatar.src = "{% if community and community.avatar and community.avatar|startswith:'https' %}{{ community.avatar }}{% else %}{% static community.avatar %}{% endif %}";
+        selectedAvatar.src = "{% if community and community.avatar and community.avatar|startswith:'https' %}{{ community.avatar }}{% else %}{{MEDIA_URL}}{{community.avatar}}{% endif %}";
         selectedAvatar.classList.remove('hidden');
         selectedName.textContent = "{{community.name}}";
         hiddenSelect.value = "{{community.id}}";
