--- a/templates/components/community/community_rules.html
+++ b/templates/components/community/community_rules.html
@@ -22,12 +22,11 @@
             <input type="checkbox" id="t-{{rule.id}}" class="peer hidden" onchange="handle_toggle_rule(event)" />
             <label for="t-{{rule.id}}"
                 class="flex flex-row justify-between items-center rounded-lg w-full cursor-pointer">
-                <p class="text-sm text-txt_color_3 font-base">{{rule.name}}</p>
-                <div class="flex flex-row gap-1 items-center">
+                <p class="text-sm text-txt_color_3 font-medium">{{rule.name}}</p>
+                <div class="flex flex-row gap-1 pl-2">
                     {% if user_role == 'moderator' or user_role == 'admin' %}
-                    <div>
                         <button
-                            class="bg-button_gray hover:bg-button_gray_hover dark:bg-dark_2 dark:hover:bg-gray_2 rounded-full w-[40px] h-[40px] py-1 px-1 flex justify-center items-center"
+                            class="w-6 h-10 flex justify-center items-center"
                             data-modal-target="edit_community_rule" data-modal-toggle="edit_community_rule"
                             onclick="populate_edit_input_values('{{rule.name}}', '{{rule.description}}', '{{rule.id}}')">
                             <svg rpl="" fill="currentColor" height="14" icon-name="edit-outline" viewBox="0 0 20 20"
@@ -37,32 +36,33 @@
                                 </path>
                             </svg>
                         </button>
-                    </div>
 
-                    <button 
-                        class="bg-button_gray hover:bg-button_gray_hover dark:bg-dark_2 dark:hover:bg-gray_2 rounded-full w-[40px] h-[40px] py-1 px-1 flex justify-center items-center"
-                        data-modal-target="delete_community_rule" data-modal-toggle="delete_community_rule"
-                        onclick="populate_delete_rule_input_values('{{rule.name}}', '{{rule.description}}', '{{rule.id}}')">
-                        <svg rpl="" fill="currentColor" height="14" icon-name="delete-outline" viewBox="0 0 20 20"
-                            width="14" xmlns="http://www.w3.org/2000/svg">
+                        <button 
+                            class="w-6 h-10 flex justify-center items-center"
+                            data-modal-target="delete_community_rule" data-modal-toggle="delete_community_rule"
+                            onclick="populate_delete_rule_input_values('{{rule.name}}', '{{rule.description}}', '{{rule.id}}')">
+                            <svg rpl="" fill="currentColor" height="14" icon-name="delete-outline" viewBox="0 0 20 20"
+                                width="14" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M15.751 6.023 17 6.106l-.761 11.368a2.554 2.554 0 0 1-.718 1.741A2.586 2.586 0 0 1 13.8 20H6.2a2.585 2.585 0 0 1-1.718-.783 2.553 2.553 0 0 1-.719-1.737L3 6.106l1.248-.083.761 11.369c-.005.333.114.656.333.908.22.252.525.415.858.458h7.6c.333-.043.64-.207.859-.46.22-.254.338-.578.332-.912l.76-11.363ZM18 2.983v1.243H2V2.983h4v-.372A2.737 2.737 0 0 1 6.896.718 2.772 2.772 0 0 1 8.875.002h2.25c.729-.03 1.44.227 1.979.716.538.488.86 1.169.896 1.893v.372h4Zm-10.75 0h5.5v-.372a1.505 1.505 0 0 0-.531-1.014 1.524 1.524 0 0 0-1.094-.352h-2.25c-.397-.03-.79.097-1.094.352-.304.256-.495.62-.531 1.014v.372Z">
+                                </path>
+                            </svg>
+                        </button>
+                    {% endif %}
+                    
+                    <div class="w-6 h-10 flex justify-center items-center">
+                        <svg id="cap-{{rule.id}}" fill="currentColor" height="20" viewBox="0 0 20 20" width="20"
+                            xmlns="http://www.w3.org/2000/svg" class="transition-transform ">
                             <path
-                                d="M15.751 6.023 17 6.106l-.761 11.368a2.554 2.554 0 0 1-.718 1.741A2.586 2.586 0 0 1 13.8 20H6.2a2.585 2.585 0 0 1-1.718-.783 2.553 2.553 0 0 1-.719-1.737L3 6.106l1.248-.083.761 11.369c-.005.333.114.656.333.908.22.252.525.415.858.458h7.6c.333-.043.64-.207.859-.46.22-.254.338-.578.332-.912l.76-11.363ZM18 2.983v1.243H2V2.983h4v-.372A2.737 2.737 0 0 1 6.896.718 2.772 2.772 0 0 1 8.875.002h2.25c.729-.03 1.44.227 1.979.716.538.488.86 1.169.896 1.893v.372h4Zm-10.75 0h5.5v-.372a1.505 1.505 0 0 0-.531-1.014 1.524 1.524 0 0 0-1.094-.352h-2.25c-.397-.03-.79.097-1.094.352-.304.256-.495.62-.531 1.014v.372Z">
+                                d="M10 13.125a.624.624 0 0 1-.442-.183l-5-5 .884-.884L10 11.616l4.558-4.558.884.884-5 5a.624.624 0 0 1-.442.183Z">
                             </path>
                         </svg>
-                    </button>
-                    {% endif %}
-
-                    <svg id="cap-{{rule.id}}" fill="currentColor" height="20" viewBox="0 0 20 20" width="20"
-                        xmlns="http://www.w3.org/2000/svg" class="transition-transform bg-button_gray hover:bg-button_gray_hover dark:bg-dark_2 dark:hover:bg-gray_2 rounded-full w-[40px] h-[40px] py-1 px-1 flex justify-center items-center">
-                        <path
-                            d="M10 13.125a.624.624 0 0 1-.442-.183l-5-5 .884-.884L10 11.616l4.558-4.558.884.884-5 5a.624.624 0 0 1-.442.183Z">
-                        </path>
-                    </svg>
+                    </div>
                 </div>
             </label>
             <div
                 class="peer-checked:max-h-[1000px] peer-checked:opacity-100 max-h-0 opacity-0 transition-all duration-300 overflow-hidden flex flex-col gap-2">
-                <p class="text-xs text-txt_color_3">{{rule.description}}</p>
+                <p class="text-sm text-txt_color_3">{{rule.description}}</p>
             </div>
         </div>
     </li>
