--- a/templates/components/leftbar.html
+++ b/templates/components/leftbar.html
@@ -3,7 +3,13 @@
 {% load utils %}
 
 <div
-    class="flex flex-col gap-2 overflow-auto p-3 left-0 text-sm top-[10vh] h-[90vh] w-[15%] fixed border-r dark:bg-dark_3 dark:border-gray_1 shadow-md">
+    class="flex flex-col gap-2 overflow-auto p-3 left-0 text-sm top-[10vh] h-[90vh] w-[15%] fixed border-r dark:bg-dark_3 dark:border-gray_1 shadow-md 
+    [&::-webkit-scrollbar]:w-2
+    [&::-webkit-scrollbar-track]:bg-gray-100
+    [&::-webkit-scrollbar-thumb]:bg-gray-300
+    dark:[&::-webkit-scrollbar-track]:bg-neutral-700
+    dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500
+    ">
     <div>
         <a href="{% url 'account:dashboard' %}"
             class="hover:bg-button_gray_hover dark:hover:bg-gray_1 flex flex-row gap-3 justify-start items-center px-3 py-2 rounded-lg w-full">
