--- a/templates/community.html
+++ b/templates/community.html
@@ -45,7 +45,7 @@
                         {% if user_role == 'moderator' or user_role == 'admin' %}
                             <button
                               onclick="set_is_editing(true); set_current_edit('Avatar')"
-                              class="absolute bottom-2 right-2 flex h-7 w-7 flex-col items-center justify-center rounded-full border bg-button_gray"
+                              class="absolute bottom-2 right-2 flex h-7 w-7 flex-col items-center justify-center rounded-full border bg-white dark:bg-dark_1 dark:hover:bg-dark_2"
                             >
                                 <svg rpl="" fill="currentColor" height="16"
                                     icon-name="edit-outline" viewBox="0 0 20 20" width="16"
